Changes: 1.Fix carousel image error 2.Add default language for language-switcher 3.Update menu styles 4.Change z-index of control arrow to one

--- a/client/src/components/Header/Menu/Menu.module.scss
+++ b/client/src/components/Header/Menu/Menu.module.scss
@@ -118,7 +118,7 @@
   }
 }
 
-@media (min-width: $tablet-width) {
+@media (min-width: $desktop-width) {
   .menu {
     width: 100%;
     position: static;
@@ -128,6 +128,7 @@
     justify-content: flex-end;
     background-color: transparent;
     overflow: hidden;
+    transition: none;
   }
 
   .menu__header,
