--- a/client/src/pages/Main/Welcome/carousel-custom.scss
+++ b/client/src/pages/Main/Welcome/carousel-custom.scss
@@ -18,6 +18,7 @@
     background: none;
     opacity: 1;
     top: 100px;
+    z-index: 1;
 
     &:hover,
     &:focus {
